# tasteswift

./: .gitignore  manage.py  pyproject.toml
accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cart/: models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
checkout/: apps.py  urls.py  views.py
customers/: admin.py  models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py
location/: models.py
location/migrations/: 0001_initial.py
menu/: admin.py  models.py  serializers.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_category_vendor_alter_fooditem_vendor.py
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_payment_status_alter_order_stripe_checkout_id.py
tasteswift/: asgi.py  settings.py  urls.py  wsgi.py
timings/: apps.py
